--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body {
   --type-first: Helvetica, Arial, sans-serif;
   --second-type: 'Spectral', Georgia;
   font-family: var(--type-first);
+  padding-top: 4rem;
 }
 
 h1,
@@ -37,8 +38,13 @@ button, input{
   color: #333;
 }
 
+a{
+  text-decoration: none;
+}
+
 .container{
   max-width: 50rem;
   padding: 0 1rem;
   margin: 0 auto;
 }
+
